<resources>
    <string name="app_name">GO OFFICE</string>
    <string name="email">Email</string>
    <string name="login_button">Acceder</string>
    <string name="password">Contraseña</string>
    <string name="register">Registrar</string>
    <string name="provider">Proveedor</string>
    <string name="logout">Cerrar sesión</string>
    <string name="login_automatically">Iniciar sesión automaticamente</string>
    <string name="title_activity_home">Inicio</string>
    <string name="title_home">Inicio</string>
    <string name="title_spaces">Espacios</string>
    <string name="title_check">Check in/out</string>
    <string name="prefs_file">com.example.loginfirebase.PREFERENCE_FILE_KEY</string>
    <string name="date_text">Fecha</string>
    <string name="start_hour_text">Hora de entrada</string>
    <string name="exit_hour_text">Hora de salida</string>
    <string name="reserve_text">Reservar</string>
    <string name="reserve_description">Ingresa la fecha, hora de entrada y salida para reservar un espacio</string>
    <string name="Choose_a_free_space_to_reserve">Seleccione el espacio libre a reservar</string>
    <string name="user_log_text">Usuario logueado:</string>
    <string name="invalid_id">Ingrese un número de cédula valido</string>
    <string name="invalid_name">Ingrese el nombre del empleado</string>
    <string name="invalid_email">Ingrese un email válido</string>
    <string name="invalid_job_spinner">Seleccione un puesto</string>
    <string name="invalid_department_spinner">Seleccione un departamento</string>
    <string-array name="jobs_array">
        <item>Seleccione un puesto</item>
        <item>Desarrollador</item>
        <item>Analista</item>
        <item>Diseñador</item>
        <item>Soporte</item>
        <item>Calidad</item>
        <item>Documentación</item>
    </string-array>
    <string-array name="departments_array">
        <item>Seleccione un departamento</item>
        <item>TIC</item>
        <item>Sistemas</item>
        <item>Centro de atención</item>
        <item>Negocio</item>
        <item>Control</item>
        <item>Comunicaciones</item>
    </string-array>
    <string name="space_to_reserve">Espacio a reservar</string>
    <string name="Employees">Empleados</string>
</resources>