<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.spaces.SpacesFragment">

    <TextView
        android:id="@+id/textViewReserveDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reserve_description" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date_text"
        android:minHeight="48dp"
        android:clickable="false"
        android:focusable="false"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/editTextStartTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/start_hour_text"
        android:minHeight="48dp"
        android:clickable="false"
        android:focusable="false"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/editTextFinalTime"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:hint="@string/exit_hour_text"
        android:minHeight="48dp"
        android:clickable="false"
        android:focusable="false"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/reserveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reserve_text" />
</LinearLayout>